tests/paczka1/small_fuzzy/56371997.err
Error in line 3: S559 S559 65,4
Error in line 6: S559 A362 12,4
Error in line 1: jwyg5IekS1C A615 29,9
